# fix-x

./: .gitignore  Cargo.toml  LICENSE  README.md  app.manifest
installer/: build-installer.ps1  install.ps1  uninstall.ps1
installer/native/: Cargo.toml  app.manifest  build.rs
installer/native/src/: main.rs
src/: clipboard.rs  config.rs  gui.rs  i18n.rs  main.rs  startup.rs
tools/: generate_logo.py
