[package]
name = "fix-x-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
